# portainer_templates_aggregator

./: .gitignore  README.md  flake.nix  merged-with-duplicates.json  merged.json  pyproject.toml  template.json
.github/workflows/: update_templates.yml
aggregator/: __main__.py  configuration.json
scripts/: configuration.json  main.py
